@@ -1,5 +1,10 @@
 2008-03-21  Wakaba  <wakaba@suika.fam.cx>
 
+	* RDFXML.pm: Language accessor implemented.
+	Local (null-namespace) attribute support.
+
+2008-03-21  Wakaba  <wakaba@suika.fam.cx>
+
 	* RDFXML.pm: Factored out ID checking code.
 
 2008-03-21  Wakaba  <wakaba@suika.fam.cx>
